# darknet_ros

./: .gitmodules  LICENSE  README.md
darknet_ros/: CMakeLists.txt  package.xml
darknet_ros/include/: Extrapolate_Coordinates.hpp  Tracking_Kalman.hpp
darknet_ros/include/darknet_ros/: YoloROSTracker.hpp
darknet_ros/src/: Extrapolate_Coordinates.cpp  Tracking_Kalman.cpp  YoloROSTracker.cpp  yolo_object_detector_node.cpp
darknet_ros_msgs/: CMakeLists.txt  package.xml
darknet_ros_msgs/msg/: BoundingBox.msg
