<?xml version="1.0"?>
<package format="2">
  <name>darknet_ros</name>
  <version>1.0.1</version>
  <description>Darknet is an open source neural network framework that runs on CPU and GPU. You only look once (YOLO) is a state-of-the-art, real-time object detection system.</description>
  <maintainer email="katarapushkal@gmail.com">Pushkal Katara</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/pushkalkatara/darknet_ros</url>
  <author email="katarapushkal@gmail.com">Pushkal Katara</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>darknet_ros_msgs</depend>

</package>
