<?xml version="1.0"?>
<package>
  <name>darknet_ros_msgs</name>
  <version>1.0.1</version>
  <description>Darknet is an open source neural network framework that runs on CPU and GPU. You only look once (YOLO) is a state-of-the-art, real-time object detection system.</description>
  <maintainer email="katarapushkal@gmail.com">Pushkal Katara</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/pushkalkatara/darknet_ros</url>
  <author email="katarapushkal@gmail.com">Pushkal Katara</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
